--- a/README.mkd
+++ b/README.mkd
@@ -14,4 +14,4 @@ ATXMEGA32A4U + interface circuitry acts as I2C slave for Lego NXT, reading encod
 
 NXT's I2C is 9600bps @ 5V w/ internal 82k pullups, with 16B in/out buffer. XMega needs 3v3 I2C, so FET based level shifter is needed.
 
-Basic design will be "wing" for xmega breakout, offering I2C level shifting / mechanical connector, RS232 level shifting / mechanical connector, 5v0 regulator, extensive decoupling, etc.
+Basic design will be "wing" for xmega breakout, offering [I2C level shifting](http://www.adafruit.com/datasheets/AN10441.pdf) / mechanical connector, [RS232 level shifting](http://datasheets.maximintegrated.com/en/ds/MAX3222-MAX3241.pdf) / mechanical connector, 5v0 regulator, extensive decoupling, etc.
