--- a/README.mkd
+++ b/README.mkd
@@ -16,7 +16,7 @@ ATXMEGA32A4U + interface circuitry acts as I2C slave for Lego NXT, reading encod
 
 NXT's I2C is 9600bps @ 5V w/ internal 82k pullups, with 16B in/out buffer. XMega needs 3v3 I2C, so level shifter is needed.
 
-Basic design will be "wing" for xmega breakout, offering [I2C level shifting](http://www.nxp.com/documents/data_sheet/PCA9306.pdf) / [mechanical connector](http://cgi.ebay.com/ws/eBayISAPI.dll?ViewItem&item=110980215829), [RS232 level shifting](http://datasheets.maximintegrated.com/en/ds/MAX3222-MAX3241.pdf) / mechanical connector, 5v0 regulator, extensive decoupling, etc.
+Basic design will be "wing" for xmega breakout, offering [I2C level shifting](http://www.nxp.com/documents/data_sheet/PCA9306.pdf) / [mechanical connector](http://cgi.ebay.com/ws/eBayISAPI.dll?ViewItem&item=110980215829), [RS232 level shifting](http://www.ti.com/lit/ds/symlink/sn65c3232e.pdf) / mechanical connector, 5v0 regulator, extensive decoupling, etc.
 
 -----
 
@@ -24,7 +24,7 @@ Tentative BOM
 
 * PCA9306D,118
 * ATXMEGA16A4U-AUR
-* MAX3223IDWR
+* SN75C3232EDR
 * NXT RJ12 6P6C connector with offset latch
 * 3x MAE3-A10-118-220-7B encoders
 * 3x Faulhaber 2622-012B
