--- a/README.mkd
+++ b/README.mkd
@@ -1,73 +1,3 @@
 This is the dev repo for a AUV tail section control board, offering direct drive capabilities for a primary thruster and three rotary-encoded steering BLDC gearmotors.
 
-
------
-
-### Mechanical design.
-
-Everything must fit into a 4.493 inch diameter cylinder, 2.968 inches deep.
-
------
-
-Notes:
-
-28V power backbone.
-
-Encoders take 5v supply, output 5V pwm @ 12b, 250Hz, requiring voltage divider before interface with XMega.
-
-RS232 communication to primary sub controller gives thrust/vector setpoint.
-
-Target of 50Hz control loop update rate.
-
-ATXMEGA32A4U + interface circuitry acts as I2C slave for Lego NXT, reading encoder PWM values and handling RS232 comms.
-
-NXT's I2C is 9600bps @ 5V w/ internal 82k pullups, with 16B in/out buffer. XMega needs 3v3 I2C, so level shifter is needed.
-
-Basic design will be "wing" for xmega breakout, offering [I2C level shifting](http://www.nxp.com/documents/data_sheet/PCA9306.pdf) / [mechanical connector](http://cgi.ebay.com/ws/eBayISAPI.dll?ViewItem&item=110980215829), [RS232 level shifting](http://www.ti.com/lit/ds/symlink/sn65c3232e.pdf) / mechanical connector, 5v0 regulator, extensive decoupling, etc.
-
------
-
-Tentative BOM
-
-* PCA9306D,118
-* ATXMEGA16A4U-AUR
-* SN75C3232EDR
-* NXT RJ12 6P6C connector with offset latch
-* 3x MAE3-A10-118-220-7B encoders
-* 3x Faulhaber 2622-012B
-* D-sub connector, similar to DigiKey's DB17W2PA00LF-ND, with 17 terminals, 15 signal, 2 power
-
------
-
-Power musings:
-
-Encoders need 20mA at 5v, times three
-
-NXT needs 150mA-500mA at 5v
-
-Faulhaber BLDCs need to be driven @ 12v, stall current of 0.4224A/ea
-
-Parts of use:
-
-28V -> 12V
-
-* [PT78ST112V](http://www.ti.com/lit/ds/slts059a/slts059a.pdf)
- * "1.5 Amp Positive Step-Down Integrated Switching Regulator"
-
-28V -> 5V
-
-* 445-8034-1-ND
- * "CAP CER 10UF 35V 20% X7R 1206"
-* IFX27001TF V50INCT-ND 
- * "IC REG LDO 5V 1A TO252-3"
-* 495-1537-1-ND
- * "CAP TANT 470UF 10V 10% 2917"
-
-5V -> 3.3V
-
-* 445-8034-1-ND
- * "CAP CER 10UF 35V 20% X7R 1206"
-* AP1117E33GDICT-ND
- * "IC REG LDO 3.3V 1A SOT-223"
-* 495-1537-1-ND
- * "CAP TANT 470UF 10V 10% 2917"
+Please see the writeup and documentation contained in [AUVElectricalDesign.pdf]().
